newChanges on home page

--- a/package.json
+++ b/package.json
@@ -11,18 +11,24 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "@mux/mux-player": "^1.14.2",
+    "@mux/mux-player-react": "^1.14.2",
     "@nextui-org/react": "^2.1.10",
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-scroll-area": "^1.0.4",
     "@radix-ui/react-separator": "^1.0.3",
+    "@reduxjs/toolkit": "^1.6.2",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.6",
     "@types/node": "20.5.8",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "@vercel/analytics": "^1.0.2",
+    "@vidstack/player": "^1.6.5",
+    "@vidstack/player-react": "^1.6.5",
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
+    "bowser": "^2.11.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "dotenv": "^16.3.1",
@@ -31,14 +37,24 @@
     "framer-motion": "^10.16.2",
     "jose": "^4.14.6",
     "jsonwebtoken": "^9.0.2",
+    "keen-slider": "^6.8.6",
+    "lit": "^2.8.0",
     "lucide-react": "^0.274.0",
     "next": "13.4.19",
+    "nprogress": "^0.2.0",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-player": "^2.12.0",
+    "react-iframe": "^1.8.5",
+    "react-infinite-scroll-hook": "^4.1.1",
+    "react-player": "^2.13.0",
+    "react-redux": "^7.2.5",
+    "react-remove-scroll-bar": "^2.3.3",
     "react-spinners": "^0.13.8",
     "react-useanimations": "^2.10.0",
+    "redux-logger": "^3.0.6",
+    "sharp": "^0.30.7",
+    "styled-components": "^5.3.5",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
@@ -46,6 +62,7 @@
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/styled-components": "^5.1.26",
     "daisyui": "^3.6.4"
   }
 }
